[pgr] fix (galleryView): remove overflow: hidden from container

--- a/pro-gallery-renderer/src/components/styles/gallery.scss
+++ b/pro-gallery-renderer/src/components/styles/gallery.scss
@@ -490,7 +490,6 @@
   div.pro-gallery {
     width: 100%;
     height: 100%;
-    overflow: hidden;
     backface-visibility: hidden;
     position: relative;
 
